// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage 1`] = `
.pf-c-background-image.css-flp5jq {
  display: block;
}

<div
  className="pf-c-background-image css-flp5jq"
/>
`;

exports[`BackgroundImage 2`] = `
.pf-c-background-image.css-flp5jq {
  display: block;
}

<div
  className="pf-c-background-image css-flp5jq"
/>
`;

exports[`allows passing in a single string as the image src 1`] = `
.pf-c-background-image.css-1vzg5gc {
  display: block;
}

<div
  className="pf-c-background-image css-1vzg5gc"
/>
`;
